--- a/ViewLearn/app/src/main/res/layout/activity_layout_inflater.xml
+++ b/ViewLearn/app/src/main/res/layout/activity_layout_inflater.xml
@@ -1,9 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_activity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LayoutInflaterActivity">
+    android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout
+        android:id="@+id/fl_container"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@android:color/holo_blue_bright">
+
+    </FrameLayout>
+
+</LinearLayout>
