--- a/GestureLockDemo/app/src/main/res/layout/activity_main.xml
+++ b/GestureLockDemo/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="40dp"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:background="@android:color/holo_blue_light">
 
-    <wxj.gesturelockdemo.GestureLock
-        android:id="@+id/gesture_lock"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <TextView
+        android:layout_width="50dp"
+        android:layout_height="20dp"
+        android:text="Hello xxn！"/>
 
 </LinearLayout>
