wxj: Draw the normal bitmap.

--- a/GestureLockDemo/app/src/main/res/values/attrs.xml
+++ b/GestureLockDemo/app/src/main/res/values/attrs.xml
@@ -3,5 +3,6 @@
     <declare-styleable name="GestureLock">
         <attr name="bitmap_normal" format="reference"/>
         <attr name="bitmap_press" format="reference"/>
+        <attr name="space" format="integer|dimension"/>
     </declare-styleable>
 </resources>
