--- a/GestureLockDemo/app/src/main/res/layout/activity_main.xml
+++ b/GestureLockDemo/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="100dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <wxj.gesturelockdemo.GestureLock
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         app:bitmap_normal="@mipmap/ic_finger_normal"
         app:bitmap_press="@mipmap/ic_finger_press"
+        app:space="20"
         android:background="@color/colorAccent"/>
 
 </LinearLayout>
