--- a/Practice/app/src/main/res/layout/activity_main.xml
+++ b/Practice/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
+
+    <Button
+        android:id="@+id/btn_store_data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-
+        android:text="数据存储"
+        tools:layout_editor_absoluteX="46dp"
+        tools:layout_editor_absoluteY="72dp"/>
 </android.support.constraint.ConstraintLayout>
