--- a/Practice/app/src/main/res/layout/activity_main.xml
+++ b/Practice/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,21 @@
     <Button
         android:id="@+id/btn_store_data"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="47dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="数据存储"
-        tools:layout_editor_absoluteX="46dp"
-        tools:layout_editor_absoluteY="72dp"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <Button
+        android:id="@+id/btn_fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="go Fragment"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_store_data"/>
+
 </android.support.constraint.ConstraintLayout>
