--- a/InterviewNote/app/src/main/res/layout/activity_c_single_task.xml
+++ b/InterviewNote/app/src/main/res/layout/activity_c_single_task.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activitychapter.BActivity">
+    tools:context=".activitychapter.CSingleTaskActivity">
+
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="启动 DSingleTaskActivity"
+        android:text="启动 DSingTaskActivity"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
