--- a/ViewLearn/app/src/main/res/layout/activity_main.xml
+++ b/ViewLearn/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,8 +12,5 @@
         android:id="@+id/btn_layoutInflater"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LayoutInflater"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
-</android.support.constraint.ConstraintLayout>
+        android:text="LayoutInflater" />
+</LinearLayout>
