--- a/TestDemo/app/src/main/res/values/styles.xml
+++ b/TestDemo/app/src/main/res/values/styles.xml
@@ -1,5 +1,4 @@
 <resources>
-
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
@@ -8,8 +7,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="FullDialog" parent="Theme.AppCompat.Dialog">
-<!--        <item name="windowNoTitle">true</item>-->
-        <item name="android:windowIsFloating">true</item>
+    <style name="FilterDialog" parent="Theme.AppCompat.Dialog">
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
+
 </resources>
